2003-08-07  Han-Wen Nienhuys  <hanwen@cs.uu.nl>

	* VERSION (PATCH_LEVEL): release 1.6.12
	
	* Documentation/user/GNUmakefile
	($(outdir)/lilypond/lilypond.html): huh, what is  $* ?

	* Documentation/footer.html.in: remove useless footer.

	* GNUmakefile.in: add rsync-web target 
	(top-web): add refresh index.html. Remove topdocs/index.tely
	
	* Documentation/header.html.in: remove outdated links.

2003-07-19  Jan Nieuwenhuizen  <janneke@gnu.org>

	* GNUmakefile.in: Fix for fonts/web target.

2003-07-17  Han-Wen Nienhuys  <hanwen@cs.uu.nl>

	* VERSION: release 1.6.11
	
	* make/ly-rules.make ($(outdir)/%.pdf): backport -u +lilypond.map
	fix

	* stepmake/stepmake/metafont-rules.make: backport 1.7 fixes.

	* scripts/etf2ly.py: backport 1.7.24 fixes.

	* Documentation/topdocs/INSTALL.texi (Top): idem.

	* Documentation/topdocs/README.texi (Top): change to ftp.lilypond.org

2003-07-14  Han-Wen Nienhuys  <hanwen@cs.uu.nl>

	* lily/main.cc (notice): change FSF address

	* po/de.po: new version.

2003-07-02  Han-Wen Nienhuys  <hanwen@cs.uu.nl>

	* lily/duration.cc (var): backport SCM_ASSERT_TYPE sideeffect fix. 

	* lily/parser.yy (Repeated_music): backport tremolo fix.

	* lily/chord-tremolo-engraver.cc: idem.

2003-06-23  Han-Wen Nienhuys  <hanwen@cs.uu.nl>

	* Documentation/topdocs/index.tely (Top): typo

2003-06-08  Jan Nieuwenhuizen  <janneke@gnu.org>

	* configure.in: Add unsupported check for g++ >= 3.3.

	* stepmake/aclocal.m4 (STEPMAKE_CHECK_VERSION_UNSUPPORTED): New
	function (backport.)

2003-05-23  Han-Wen Nienhuys  <hanwen@cs.uu.nl>

	* scripts/ly2dvi.py (extra_init): add compat2 to latexoptions. 

2003-05-18  Jan Nieuwenhuizen  <janneke@gnu.org>

	* GNUmakefile.in (fonts): Also make fontball.

2003-05-17  Jan Nieuwenhuizen  <janneke@gnu.org>

	* scripts/*:
	* lily/main.cc: It's 2003 already; messages only.

	* Documentation/user/GNUmakefile: backport: Compatibility fix for
	new makeinfo.  Please upgrade to texinfo CVS or pretest > 4.5.90